--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: white;
+    color: black;
 }
 
 .profile-pic {
@@ -21,9 +21,9 @@
     align-items: center;
     width: 100%;
     justify-content: space-evenly;
-    color: white;
+    color: black;
 }
 
 .welcome {
-    color: white;
+    color: black;
 }
